Persistenza
In teoria sta persistenza dovrebbe funzionare, ho inoltre aggiunto un meccanismo di chiusura dell'executorService